exports[`Login component can render correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Login
    backButtonStyle={
        Object {
            "height": 40,
          }
    }
    backButtonTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 30,
          }
    }
    baseButtonStyle={
        Object {
            "alignSelf": "stretch",
            "backgroundColor": "#446cb3",
            "height": 40,
            "justifyContent": "center",
            "marginVertical": 10,
          }
    }
    baseButtonTextStyle={
        Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 20,
          }
    }
    fieldsetWrapperStyle={
        Object {
            "alignSelf": "stretch",
            "borderRadius": 2,
          }
    }
    haveResetPassword={false}
    inputIconStyle={
        Object {
            "bottom": 11,
            "height": 20,
            "position": "absolute",
            "resizeMode": "contain",
            "width": 20,
          }
    }
    inputPlaceholderTextColor="#ccc"
    inputStyle={
        Object {
            "alignSelf": "stretch",
            "color": "#333",
            "height": 40,
            "paddingLeft": 30,
          }
    }
    inputWrapperStyle={
        Object {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "marginTop": 5,
          }
    }
    labels={
        Object {
            "back": "Back",
            "forgotPassword": "Forgot password",
            "forgotPasswordFormButton": "Send",
            "loginFormButton": "Login",
            "password": "Password",
            "rememberMe": "Remember Me",
            "userIdentification": "Email",
          }
    }
    loginFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    loginResetPasswordLinkStyle={
        Object {
            "alignSelf": "flex-end",
            "height": 30,
            "justifyContent": "center",
            "marginVertical": 5,
          }
    }
    loginResetPasswordLinkTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 17,
          }
    }
    logoStyle={
        Object {
            "alignSelf": "center",
            "height": 150,
            "marginBottom": 10,
            "resizeMode": "contain",
          }
    }
    onLogin={[Function]}
    onResetPasswordClick={[Function]}
    passwordInputIcon={1}
    resetPasswordFormSubmitButtonStyle={
        Object {
            "marginTop": 20,
          }
    }
    resetPasswordFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    showLogo={true}
    showLogoOnLogin={true}
    showLogoOnResetPassword={true}
    userIdentificationInputIcon={1} />,
  "nodes": Array [
    <Login
      backButtonStyle={
            Object {
                  "height": 40,
                }
      }
      backButtonTextStyle={
            Object {
                  "color": "#6C7A89",
                  "fontSize": 30,
                }
      }
      baseButtonStyle={
            Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#446cb3",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 10,
                }
      }
      baseButtonTextStyle={
            Object {
                  "alignSelf": "center",
                  "color": "#fff",
                  "fontSize": 20,
                }
      }
      fieldsetWrapperStyle={
            Object {
                  "alignSelf": "stretch",
                  "borderRadius": 2,
                }
      }
      haveResetPassword={false}
      inputIconStyle={
            Object {
                  "bottom": 11,
                  "height": 20,
                  "position": "absolute",
                  "resizeMode": "contain",
                  "width": 20,
                }
      }
      inputPlaceholderTextColor="#ccc"
      inputStyle={
            Object {
                  "alignSelf": "stretch",
                  "color": "#333",
                  "height": 40,
                  "paddingLeft": 30,
                }
      }
      inputWrapperStyle={
            Object {
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "marginTop": 5,
                }
      }
      labels={
            Object {
                  "back": "Back",
                  "forgotPassword": "Forgot password",
                  "forgotPasswordFormButton": "Send",
                  "loginFormButton": "Login",
                  "password": "Password",
                  "rememberMe": "Remember Me",
                  "userIdentification": "Email",
                }
      }
      loginFormWrapperStyle={
            Object {
                  "bottom": 80,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                }
      }
      loginResetPasswordLinkStyle={
            Object {
                  "alignSelf": "flex-end",
                  "height": 30,
                  "justifyContent": "center",
                  "marginVertical": 5,
                }
      }
      loginResetPasswordLinkTextStyle={
            Object {
                  "color": "#6C7A89",
                  "fontSize": 17,
                }
      }
      logoStyle={
            Object {
                  "alignSelf": "center",
                  "height": 150,
                  "marginBottom": 10,
                  "resizeMode": "contain",
                }
      }
      onLogin={[Function]}
      onResetPasswordClick={[Function]}
      passwordInputIcon={1}
      resetPasswordFormSubmitButtonStyle={
            Object {
                  "marginTop": 20,
                }
      }
      resetPasswordFormWrapperStyle={
            Object {
                  "bottom": 80,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                }
      }
      showLogo={true}
      showLogoOnLogin={true}
      showLogoOnResetPassword={true}
      userIdentificationInputIcon={1} />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Login
        backButtonStyle={
                Object {
                        "height": 40,
                      }
        }
        backButtonTextStyle={
                Object {
                        "color": "#6C7A89",
                        "fontSize": 30,
                      }
        }
        baseButtonStyle={
                Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#446cb3",
                        "height": 40,
                        "justifyContent": "center",
                        "marginVertical": 10,
                      }
        }
        baseButtonTextStyle={
                Object {
                        "alignSelf": "center",
                        "color": "#fff",
                        "fontSize": 20,
                      }
        }
        fieldsetWrapperStyle={
                Object {
                        "alignSelf": "stretch",
                        "borderRadius": 2,
                      }
        }
        inputIconStyle={
                Object {
                        "bottom": 11,
                        "height": 20,
                        "position": "absolute",
                        "resizeMode": "contain",
                        "width": 20,
                      }
        }
        inputPlaceholderTextColor="#ccc"
        inputStyle={
                Object {
                        "alignSelf": "stretch",
                        "color": "#333",
                        "height": 40,
                        "paddingLeft": 30,
                      }
        }
        inputWrapperStyle={
                Object {
                        "borderBottomColor": "#ccc",
                        "borderBottomWidth": 1,
                        "marginTop": 5,
                      }
        }
        labels={Object {}}
        loginFormWrapperStyle={
                Object {
                        "bottom": 80,
                        "flex": 1,
                        "justifyContent": "center",
                        "paddingHorizontal": 15,
                      }
        }
        loginResetPasswordLinkStyle={
                Object {
                        "alignSelf": "flex-end",
                        "height": 30,
                        "justifyContent": "center",
                        "marginVertical": 5,
                      }
        }
        loginResetPasswordLinkTextStyle={
                Object {
                        "color": "#6C7A89",
                        "fontSize": 17,
                      }
        }
        logoStyle={
                Object {
                        "alignSelf": "center",
                        "height": 150,
                        "marginBottom": 10,
                        "resizeMode": "contain",
                      }
        }
        onLogin={[Function]}
        passwordInputIcon={1}
        resetPasswordFormSubmitButtonStyle={
                Object {
                        "marginTop": 20,
                      }
        }
        resetPasswordFormWrapperStyle={
                Object {
                        "bottom": 80,
                        "flex": 1,
                        "justifyContent": "center",
                        "paddingHorizontal": 15,
                      }
        }
        showLogoOnLogin={true}
        showLogoOnResetPassword={true}
        userIdentificationInputIcon={1} />,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Login {
        "_reactInternalInstance": [Circular],
        "changeToLoginForm": [Function],
        "changeToResetPasswordForm": [Function],
        "context": Object {},
        "getLabels": [Function],
        "onLogin": [Function],
        "onResetPassword": [Function],
        "props": Object {
          "backButtonStyle": Object {
            "height": 40,
          },
          "backButtonTextStyle": Object {
            "color": "#6C7A89",
            "fontSize": 30,
          },
          "baseButtonStyle": Object {
            "alignSelf": "stretch",
            "backgroundColor": "#446cb3",
            "height": 40,
            "justifyContent": "center",
            "marginVertical": 10,
          },
          "baseButtonTextStyle": Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 20,
          },
          "fieldsetWrapperStyle": Object {
            "alignSelf": "stretch",
            "borderRadius": 2,
          },
          "inputIconStyle": Object {
            "bottom": 11,
            "height": 20,
            "position": "absolute",
            "resizeMode": "contain",
            "width": 20,
          },
          "inputPlaceholderTextColor": "#ccc",
          "inputStyle": Object {
            "alignSelf": "stretch",
            "color": "#333",
            "height": 40,
            "paddingLeft": 30,
          },
          "inputWrapperStyle": Object {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "marginTop": 5,
          },
          "labels": Object {},
          "loginFormWrapperStyle": Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          },
          "loginResetPasswordLinkStyle": Object {
            "alignSelf": "flex-end",
            "height": 30,
            "justifyContent": "center",
            "marginVertical": 5,
          },
          "loginResetPasswordLinkTextStyle": Object {
            "color": "#6C7A89",
            "fontSize": 17,
          },
          "logoStyle": Object {
            "alignSelf": "center",
            "height": 150,
            "marginBottom": 10,
            "resizeMode": "contain",
          },
          "onLogin": [Function],
          "passwordInputIcon": 1,
          "resetPasswordFormSubmitButtonStyle": Object {
            "marginTop": 20,
          },
          "resetPasswordFormWrapperStyle": Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          },
          "showLogoOnLogin": true,
          "showLogoOnResetPassword": true,
          "userIdentificationInputIcon": 1,
        },
        "refs": Object {},
        "renderLoginForm": [Function],
        "renderResetPassword": [Function],
        "state": Object {
          "resetPasswordActive": false,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Login
          backButtonStyle={
                    Object {
                              "height": 40,
                            }
          }
          backButtonTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 30,
                            }
          }
          baseButtonStyle={
                    Object {
                              "alignSelf": "stretch",
                              "backgroundColor": "#446cb3",
                              "height": 40,
                              "justifyContent": "center",
                              "marginVertical": 10,
                            }
          }
          baseButtonTextStyle={
                    Object {
                              "alignSelf": "center",
                              "color": "#fff",
                              "fontSize": 20,
                            }
          }
          fieldsetWrapperStyle={
                    Object {
                              "alignSelf": "stretch",
                              "borderRadius": 2,
                            }
          }
          haveResetPassword={false}
          inputIconStyle={
                    Object {
                              "bottom": 11,
                              "height": 20,
                              "position": "absolute",
                              "resizeMode": "contain",
                              "width": 20,
                            }
          }
          inputPlaceholderTextColor="#ccc"
          inputStyle={
                    Object {
                              "alignSelf": "stretch",
                              "color": "#333",
                              "height": 40,
                              "paddingLeft": 30,
                            }
          }
          inputWrapperStyle={
                    Object {
                              "borderBottomColor": "#ccc",
                              "borderBottomWidth": 1,
                              "marginTop": 5,
                            }
          }
          labels={
                    Object {
                              "back": "Back",
                              "forgotPassword": "Forgot password",
                              "forgotPasswordFormButton": "Send",
                              "loginFormButton": "Login",
                              "password": "Password",
                              "rememberMe": "Remember Me",
                              "userIdentification": "Email",
                            }
          }
          loginFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          loginResetPasswordLinkStyle={
                    Object {
                              "alignSelf": "flex-end",
                              "height": 30,
                              "justifyContent": "center",
                              "marginVertical": 5,
                            }
          }
          loginResetPasswordLinkTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 17,
                            }
          }
          logoStyle={
                    Object {
                              "alignSelf": "center",
                              "height": 150,
                              "marginBottom": 10,
                              "resizeMode": "contain",
                            }
          }
          onLogin={[Function]}
          onResetPasswordClick={[Function]}
          passwordInputIcon={1}
          resetPasswordFormSubmitButtonStyle={
                    Object {
                              "marginTop": 20,
                            }
          }
          resetPasswordFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          showLogo={true}
          showLogoOnLogin={true}
          showLogoOnResetPassword={true}
          userIdentificationInputIcon={1} />,
        "_renderedOutput": <Login
          backButtonStyle={
                    Object {
                              "height": 40,
                            }
          }
          backButtonTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 30,
                            }
          }
          baseButtonStyle={
                    Object {
                              "alignSelf": "stretch",
                              "backgroundColor": "#446cb3",
                              "height": 40,
                              "justifyContent": "center",
                              "marginVertical": 10,
                            }
          }
          baseButtonTextStyle={
                    Object {
                              "alignSelf": "center",
                              "color": "#fff",
                              "fontSize": 20,
                            }
          }
          fieldsetWrapperStyle={
                    Object {
                              "alignSelf": "stretch",
                              "borderRadius": 2,
                            }
          }
          haveResetPassword={false}
          inputIconStyle={
                    Object {
                              "bottom": 11,
                              "height": 20,
                              "position": "absolute",
                              "resizeMode": "contain",
                              "width": 20,
                            }
          }
          inputPlaceholderTextColor="#ccc"
          inputStyle={
                    Object {
                              "alignSelf": "stretch",
                              "color": "#333",
                              "height": 40,
                              "paddingLeft": 30,
                            }
          }
          inputWrapperStyle={
                    Object {
                              "borderBottomColor": "#ccc",
                              "borderBottomWidth": 1,
                              "marginTop": 5,
                            }
          }
          labels={
                    Object {
                              "back": "Back",
                              "forgotPassword": "Forgot password",
                              "forgotPasswordFormButton": "Send",
                              "loginFormButton": "Login",
                              "password": "Password",
                              "rememberMe": "Remember Me",
                              "userIdentification": "Email",
                            }
          }
          loginFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          loginResetPasswordLinkStyle={
                    Object {
                              "alignSelf": "flex-end",
                              "height": 30,
                              "justifyContent": "center",
                              "marginVertical": 5,
                            }
          }
          loginResetPasswordLinkTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 17,
                            }
          }
          logoStyle={
                    Object {
                              "alignSelf": "center",
                              "height": 150,
                              "marginBottom": 10,
                              "resizeMode": "contain",
                            }
          }
          onLogin={[Function]}
          onResetPasswordClick={[Function]}
          passwordInputIcon={1}
          resetPasswordFormSubmitButtonStyle={
                    Object {
                              "marginTop": 20,
                            }
          }
          resetPasswordFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          showLogo={true}
          showLogoOnLogin={true}
          showLogoOnResetPassword={true}
          userIdentificationInputIcon={1} />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Login
    backButtonStyle={
        Object {
            "height": 40,
          }
    }
    backButtonTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 30,
          }
    }
    baseButtonStyle={
        Object {
            "alignSelf": "stretch",
            "backgroundColor": "#446cb3",
            "height": 40,
            "justifyContent": "center",
            "marginVertical": 10,
          }
    }
    baseButtonTextStyle={
        Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 20,
          }
    }
    fieldsetWrapperStyle={
        Object {
            "alignSelf": "stretch",
            "borderRadius": 2,
          }
    }
    inputIconStyle={
        Object {
            "bottom": 11,
            "height": 20,
            "position": "absolute",
            "resizeMode": "contain",
            "width": 20,
          }
    }
    inputPlaceholderTextColor="#ccc"
    inputStyle={
        Object {
            "alignSelf": "stretch",
            "color": "#333",
            "height": 40,
            "paddingLeft": 30,
          }
    }
    inputWrapperStyle={
        Object {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "marginTop": 5,
          }
    }
    labels={Object {}}
    loginFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    loginResetPasswordLinkStyle={
        Object {
            "alignSelf": "flex-end",
            "height": 30,
            "justifyContent": "center",
            "marginVertical": 5,
          }
    }
    loginResetPasswordLinkTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 17,
          }
    }
    logoStyle={
        Object {
            "alignSelf": "center",
            "height": 150,
            "marginBottom": 10,
            "resizeMode": "contain",
          }
    }
    onLogin={[Function]}
    passwordInputIcon={1}
    resetPasswordFormSubmitButtonStyle={
        Object {
            "marginTop": 20,
          }
    }
    resetPasswordFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    showLogoOnLogin={true}
    showLogoOnResetPassword={true}
    userIdentificationInputIcon={1} />,
}
`;

exports[`Login component can render correctly with reset password 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ResetPassword
    backButtonStyle={
        Object {
            "height": 40,
          }
    }
    backButtonTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 30,
          }
    }
    baseButtonStyle={
        Object {
            "alignSelf": "stretch",
            "backgroundColor": "#446cb3",
            "height": 40,
            "justifyContent": "center",
            "marginVertical": 10,
          }
    }
    baseButtonTextStyle={
        Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 20,
          }
    }
    fieldsetWrapperStyle={
        Object {
            "alignSelf": "stretch",
            "borderRadius": 2,
          }
    }
    inputIconStyle={
        Object {
            "bottom": 11,
            "height": 20,
            "position": "absolute",
            "resizeMode": "contain",
            "width": 20,
          }
    }
    inputPlaceholderTextColor="#ccc"
    inputStyle={
        Object {
            "alignSelf": "stretch",
            "color": "#333",
            "height": 40,
            "paddingLeft": 30,
          }
    }
    inputWrapperStyle={
        Object {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "marginTop": 5,
          }
    }
    labels={
        Object {
            "back": "Back",
            "forgotPassword": "Forgot password",
            "forgotPasswordFormButton": "Send",
            "loginFormButton": "Login",
            "password": "Password",
            "rememberMe": "Remember Me",
            "userIdentification": "Email",
          }
    }
    loginFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    loginResetPasswordLinkStyle={
        Object {
            "alignSelf": "flex-end",
            "height": 30,
            "justifyContent": "center",
            "marginVertical": 5,
          }
    }
    loginResetPasswordLinkTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 17,
          }
    }
    logoStyle={
        Object {
            "alignSelf": "center",
            "height": 150,
            "marginBottom": 10,
            "resizeMode": "contain",
          }
    }
    onBackClick={[Function]}
    onLogin={[Function]}
    onResetPassword={[Function]}
    passwordInputIcon={1}
    resetPasswordFormSubmitButtonStyle={
        Object {
            "marginTop": 20,
          }
    }
    resetPasswordFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    showLogo={true}
    showLogoOnLogin={true}
    showLogoOnResetPassword={true}
    userIdentificationInputIcon={1} />,
  "nodes": Array [
    <ResetPassword
      backButtonStyle={
            Object {
                  "height": 40,
                }
      }
      backButtonTextStyle={
            Object {
                  "color": "#6C7A89",
                  "fontSize": 30,
                }
      }
      baseButtonStyle={
            Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#446cb3",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 10,
                }
      }
      baseButtonTextStyle={
            Object {
                  "alignSelf": "center",
                  "color": "#fff",
                  "fontSize": 20,
                }
      }
      fieldsetWrapperStyle={
            Object {
                  "alignSelf": "stretch",
                  "borderRadius": 2,
                }
      }
      inputIconStyle={
            Object {
                  "bottom": 11,
                  "height": 20,
                  "position": "absolute",
                  "resizeMode": "contain",
                  "width": 20,
                }
      }
      inputPlaceholderTextColor="#ccc"
      inputStyle={
            Object {
                  "alignSelf": "stretch",
                  "color": "#333",
                  "height": 40,
                  "paddingLeft": 30,
                }
      }
      inputWrapperStyle={
            Object {
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "marginTop": 5,
                }
      }
      labels={
            Object {
                  "back": "Back",
                  "forgotPassword": "Forgot password",
                  "forgotPasswordFormButton": "Send",
                  "loginFormButton": "Login",
                  "password": "Password",
                  "rememberMe": "Remember Me",
                  "userIdentification": "Email",
                }
      }
      loginFormWrapperStyle={
            Object {
                  "bottom": 80,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                }
      }
      loginResetPasswordLinkStyle={
            Object {
                  "alignSelf": "flex-end",
                  "height": 30,
                  "justifyContent": "center",
                  "marginVertical": 5,
                }
      }
      loginResetPasswordLinkTextStyle={
            Object {
                  "color": "#6C7A89",
                  "fontSize": 17,
                }
      }
      logoStyle={
            Object {
                  "alignSelf": "center",
                  "height": 150,
                  "marginBottom": 10,
                  "resizeMode": "contain",
                }
      }
      onBackClick={[Function]}
      onLogin={[Function]}
      onResetPassword={[Function]}
      passwordInputIcon={1}
      resetPasswordFormSubmitButtonStyle={
            Object {
                  "marginTop": 20,
                }
      }
      resetPasswordFormWrapperStyle={
            Object {
                  "bottom": 80,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                }
      }
      showLogo={true}
      showLogoOnLogin={true}
      showLogoOnResetPassword={true}
      userIdentificationInputIcon={1} />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Login
        backButtonStyle={
                Object {
                        "height": 40,
                      }
        }
        backButtonTextStyle={
                Object {
                        "color": "#6C7A89",
                        "fontSize": 30,
                      }
        }
        baseButtonStyle={
                Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#446cb3",
                        "height": 40,
                        "justifyContent": "center",
                        "marginVertical": 10,
                      }
        }
        baseButtonTextStyle={
                Object {
                        "alignSelf": "center",
                        "color": "#fff",
                        "fontSize": 20,
                      }
        }
        fieldsetWrapperStyle={
                Object {
                        "alignSelf": "stretch",
                        "borderRadius": 2,
                      }
        }
        inputIconStyle={
                Object {
                        "bottom": 11,
                        "height": 20,
                        "position": "absolute",
                        "resizeMode": "contain",
                        "width": 20,
                      }
        }
        inputPlaceholderTextColor="#ccc"
        inputStyle={
                Object {
                        "alignSelf": "stretch",
                        "color": "#333",
                        "height": 40,
                        "paddingLeft": 30,
                      }
        }
        inputWrapperStyle={
                Object {
                        "borderBottomColor": "#ccc",
                        "borderBottomWidth": 1,
                        "marginTop": 5,
                      }
        }
        labels={Object {}}
        loginFormWrapperStyle={
                Object {
                        "bottom": 80,
                        "flex": 1,
                        "justifyContent": "center",
                        "paddingHorizontal": 15,
                      }
        }
        loginResetPasswordLinkStyle={
                Object {
                        "alignSelf": "flex-end",
                        "height": 30,
                        "justifyContent": "center",
                        "marginVertical": 5,
                      }
        }
        loginResetPasswordLinkTextStyle={
                Object {
                        "color": "#6C7A89",
                        "fontSize": 17,
                      }
        }
        logoStyle={
                Object {
                        "alignSelf": "center",
                        "height": 150,
                        "marginBottom": 10,
                        "resizeMode": "contain",
                      }
        }
        onLogin={[Function]}
        onResetPassword={[Function]}
        passwordInputIcon={1}
        resetPasswordFormSubmitButtonStyle={
                Object {
                        "marginTop": 20,
                      }
        }
        resetPasswordFormWrapperStyle={
                Object {
                        "bottom": 80,
                        "flex": 1,
                        "justifyContent": "center",
                        "paddingHorizontal": 15,
                      }
        }
        showLogoOnLogin={true}
        showLogoOnResetPassword={true}
        userIdentificationInputIcon={1} />,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Login {
        "_reactInternalInstance": [Circular],
        "changeToLoginForm": [Function],
        "changeToResetPasswordForm": [Function],
        "context": Object {},
        "getLabels": [Function],
        "onLogin": [Function],
        "onResetPassword": [Function],
        "props": Object {
          "backButtonStyle": Object {
            "height": 40,
          },
          "backButtonTextStyle": Object {
            "color": "#6C7A89",
            "fontSize": 30,
          },
          "baseButtonStyle": Object {
            "alignSelf": "stretch",
            "backgroundColor": "#446cb3",
            "height": 40,
            "justifyContent": "center",
            "marginVertical": 10,
          },
          "baseButtonTextStyle": Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 20,
          },
          "fieldsetWrapperStyle": Object {
            "alignSelf": "stretch",
            "borderRadius": 2,
          },
          "inputIconStyle": Object {
            "bottom": 11,
            "height": 20,
            "position": "absolute",
            "resizeMode": "contain",
            "width": 20,
          },
          "inputPlaceholderTextColor": "#ccc",
          "inputStyle": Object {
            "alignSelf": "stretch",
            "color": "#333",
            "height": 40,
            "paddingLeft": 30,
          },
          "inputWrapperStyle": Object {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "marginTop": 5,
          },
          "labels": Object {},
          "loginFormWrapperStyle": Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          },
          "loginResetPasswordLinkStyle": Object {
            "alignSelf": "flex-end",
            "height": 30,
            "justifyContent": "center",
            "marginVertical": 5,
          },
          "loginResetPasswordLinkTextStyle": Object {
            "color": "#6C7A89",
            "fontSize": 17,
          },
          "logoStyle": Object {
            "alignSelf": "center",
            "height": 150,
            "marginBottom": 10,
            "resizeMode": "contain",
          },
          "onLogin": [Function],
          "onResetPassword": [Function],
          "passwordInputIcon": 1,
          "resetPasswordFormSubmitButtonStyle": Object {
            "marginTop": 20,
          },
          "resetPasswordFormWrapperStyle": Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          },
          "showLogoOnLogin": true,
          "showLogoOnResetPassword": true,
          "userIdentificationInputIcon": 1,
        },
        "refs": Object {},
        "renderLoginForm": [Function],
        "renderResetPassword": [Function],
        "state": Object {
          "resetPasswordActive": true,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ResetPassword
          backButtonStyle={
                    Object {
                              "height": 40,
                            }
          }
          backButtonTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 30,
                            }
          }
          baseButtonStyle={
                    Object {
                              "alignSelf": "stretch",
                              "backgroundColor": "#446cb3",
                              "height": 40,
                              "justifyContent": "center",
                              "marginVertical": 10,
                            }
          }
          baseButtonTextStyle={
                    Object {
                              "alignSelf": "center",
                              "color": "#fff",
                              "fontSize": 20,
                            }
          }
          fieldsetWrapperStyle={
                    Object {
                              "alignSelf": "stretch",
                              "borderRadius": 2,
                            }
          }
          inputIconStyle={
                    Object {
                              "bottom": 11,
                              "height": 20,
                              "position": "absolute",
                              "resizeMode": "contain",
                              "width": 20,
                            }
          }
          inputPlaceholderTextColor="#ccc"
          inputStyle={
                    Object {
                              "alignSelf": "stretch",
                              "color": "#333",
                              "height": 40,
                              "paddingLeft": 30,
                            }
          }
          inputWrapperStyle={
                    Object {
                              "borderBottomColor": "#ccc",
                              "borderBottomWidth": 1,
                              "marginTop": 5,
                            }
          }
          labels={
                    Object {
                              "back": "Back",
                              "forgotPassword": "Forgot password",
                              "forgotPasswordFormButton": "Send",
                              "loginFormButton": "Login",
                              "password": "Password",
                              "rememberMe": "Remember Me",
                              "userIdentification": "Email",
                            }
          }
          loginFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          loginResetPasswordLinkStyle={
                    Object {
                              "alignSelf": "flex-end",
                              "height": 30,
                              "justifyContent": "center",
                              "marginVertical": 5,
                            }
          }
          loginResetPasswordLinkTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 17,
                            }
          }
          logoStyle={
                    Object {
                              "alignSelf": "center",
                              "height": 150,
                              "marginBottom": 10,
                              "resizeMode": "contain",
                            }
          }
          onBackClick={[Function]}
          onLogin={[Function]}
          onResetPassword={[Function]}
          passwordInputIcon={1}
          resetPasswordFormSubmitButtonStyle={
                    Object {
                              "marginTop": 20,
                            }
          }
          resetPasswordFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          showLogo={true}
          showLogoOnLogin={true}
          showLogoOnResetPassword={true}
          userIdentificationInputIcon={1} />,
        "_renderedOutput": <ResetPassword
          backButtonStyle={
                    Object {
                              "height": 40,
                            }
          }
          backButtonTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 30,
                            }
          }
          baseButtonStyle={
                    Object {
                              "alignSelf": "stretch",
                              "backgroundColor": "#446cb3",
                              "height": 40,
                              "justifyContent": "center",
                              "marginVertical": 10,
                            }
          }
          baseButtonTextStyle={
                    Object {
                              "alignSelf": "center",
                              "color": "#fff",
                              "fontSize": 20,
                            }
          }
          fieldsetWrapperStyle={
                    Object {
                              "alignSelf": "stretch",
                              "borderRadius": 2,
                            }
          }
          inputIconStyle={
                    Object {
                              "bottom": 11,
                              "height": 20,
                              "position": "absolute",
                              "resizeMode": "contain",
                              "width": 20,
                            }
          }
          inputPlaceholderTextColor="#ccc"
          inputStyle={
                    Object {
                              "alignSelf": "stretch",
                              "color": "#333",
                              "height": 40,
                              "paddingLeft": 30,
                            }
          }
          inputWrapperStyle={
                    Object {
                              "borderBottomColor": "#ccc",
                              "borderBottomWidth": 1,
                              "marginTop": 5,
                            }
          }
          labels={
                    Object {
                              "back": "Back",
                              "forgotPassword": "Forgot password",
                              "forgotPasswordFormButton": "Send",
                              "loginFormButton": "Login",
                              "password": "Password",
                              "rememberMe": "Remember Me",
                              "userIdentification": "Email",
                            }
          }
          loginFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          loginResetPasswordLinkStyle={
                    Object {
                              "alignSelf": "flex-end",
                              "height": 30,
                              "justifyContent": "center",
                              "marginVertical": 5,
                            }
          }
          loginResetPasswordLinkTextStyle={
                    Object {
                              "color": "#6C7A89",
                              "fontSize": 17,
                            }
          }
          logoStyle={
                    Object {
                              "alignSelf": "center",
                              "height": 150,
                              "marginBottom": 10,
                              "resizeMode": "contain",
                            }
          }
          onBackClick={[Function]}
          onLogin={[Function]}
          onResetPassword={[Function]}
          passwordInputIcon={1}
          resetPasswordFormSubmitButtonStyle={
                    Object {
                              "marginTop": 20,
                            }
          }
          resetPasswordFormWrapperStyle={
                    Object {
                              "bottom": 80,
                              "flex": 1,
                              "justifyContent": "center",
                              "paddingHorizontal": 15,
                            }
          }
          showLogo={true}
          showLogoOnLogin={true}
          showLogoOnResetPassword={true}
          userIdentificationInputIcon={1} />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Login
    backButtonStyle={
        Object {
            "height": 40,
          }
    }
    backButtonTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 30,
          }
    }
    baseButtonStyle={
        Object {
            "alignSelf": "stretch",
            "backgroundColor": "#446cb3",
            "height": 40,
            "justifyContent": "center",
            "marginVertical": 10,
          }
    }
    baseButtonTextStyle={
        Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 20,
          }
    }
    fieldsetWrapperStyle={
        Object {
            "alignSelf": "stretch",
            "borderRadius": 2,
          }
    }
    inputIconStyle={
        Object {
            "bottom": 11,
            "height": 20,
            "position": "absolute",
            "resizeMode": "contain",
            "width": 20,
          }
    }
    inputPlaceholderTextColor="#ccc"
    inputStyle={
        Object {
            "alignSelf": "stretch",
            "color": "#333",
            "height": 40,
            "paddingLeft": 30,
          }
    }
    inputWrapperStyle={
        Object {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "marginTop": 5,
          }
    }
    labels={Object {}}
    loginFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    loginResetPasswordLinkStyle={
        Object {
            "alignSelf": "flex-end",
            "height": 30,
            "justifyContent": "center",
            "marginVertical": 5,
          }
    }
    loginResetPasswordLinkTextStyle={
        Object {
            "color": "#6C7A89",
            "fontSize": 17,
          }
    }
    logoStyle={
        Object {
            "alignSelf": "center",
            "height": 150,
            "marginBottom": 10,
            "resizeMode": "contain",
          }
    }
    onLogin={[Function]}
    onResetPassword={[Function]}
    passwordInputIcon={1}
    resetPasswordFormSubmitButtonStyle={
        Object {
            "marginTop": 20,
          }
    }
    resetPasswordFormWrapperStyle={
        Object {
            "bottom": 80,
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 15,
          }
    }
    showLogoOnLogin={true}
    showLogoOnResetPassword={true}
    userIdentificationInputIcon={1} />,
}
`;
